<resources>
    <string name="app_name">DataBindingAgain</string>
    <string name="app_label">Data-Binding examples</string>

    <string name="intro">Select from the dropdown list to choose an example</string>
    <string name="not_yet">Example not yet implemented</string>

    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_cool_phrase">Cool Phrase</string>
    <string name="btn_save">Save</string>
    <string name="btn_clear">Clear</string>

    <string name="intro_vm_binding">View Model is an architectural design pattern that separates the view (layout and Activity) from business rules (ViewModel and Model) architectural layers</string>

    <string-array name="examples">
        <item>MainActivity|DataBinding Examples|https://s3.amazonaws.com/android-databinding-examples/home.html</item>
        <item>SimpleBinding|Simple binding|https://s3.amazonaws.com/android-databinding-examples/simple_binding.html</item>
        <item>TwoWayBinding|Two way binding|https://s3.amazonaws.com/android-databinding-examples/two_way_binding.html</item>
        <item>ViewModelBinding|View Model|https://s3.amazonaws.com/android-databinding-examples/view_model_binding.html</item>
        <item>RecyclerViewBinding|RecyclerView binding|https://s3.amazonaws.com/android-databinding-examples/recyclerview_binding.html</item>
    </string-array>

</resources>
