<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="person"
            type="com.outspace.databindingagain.model.Person" />
    </data>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.outspace.databindingagain.view.SimpleBinding">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_first_name">
            <EditText
                android:id="@+id/first_name"
                android:text="@{person.firstName}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_last_name">
            <EditText
                android:id="@+id/last_name"
                android:text="@{person.lastName}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_birthday">
            <EditText
                android:id="@+id/birthday"
                android:text="@{person.birthDay}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_cool_phrase">
            <EditText
                android:id="@+id/cool_phrase"
                android:text="@{person.coolPhrase}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:layout_gravity="top"
            android:layout_weight="100">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="30"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="40"
                android:text="@string/btn_save"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="30"/>

        </LinearLayout>

    </LinearLayout>

</layout>
